# Easy-CMS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.cursor/plans/: easy_cms_architecture_plan_c5605eb7.plan.md  harness_feedback_00e894a1.plan.md  harness_migration_f0d8d030.plan.md
.github/workflows/: ci.yml
apps/site-template/: package.json  playwright.config.ts  tsconfig.json
apps/site-template/src/: App.tsx  main.tsx
apps/site-template/tests/: version-badge.spec.ts
apps/studio/service/: openapi.json  pyproject.toml
apps/studio/service/src/easy_cms_studio/api/: app.py  openapi.py  server.py
apps/studio/service/src/easy_cms_studio/injections/: containers.py
apps/studio/service/src/easy_cms_studio/slices/health/: __init__.py
apps/studio/service/src/easy_cms_studio/slices/health/api/: endpoints.py  (+2 more)
apps/studio/service/tests/: conftest.py  test_health.py  test_openapi.py  test_support_paths.py  test_version.py
apps/studio/web/: index.html  orval.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/studio/web/src/: App.tsx  main.tsx
apps/studio/web/tests/: version-badge.spec.ts
apps/studio/web/tests/fixtures/har/: studio-version.har
apps/sync-server/admin/: index.html  orval.config.ts  package.json  playwright.config.ts
apps/sync-server/admin/src/: App.tsx
apps/sync-server/admin/tests/: version-badge.spec.ts
apps/sync-server/admin/tests/fixtures/har/: sync-server-version.har
apps/sync-server/service/: openapi.json  pyproject.toml
apps/sync-server/service/src/easy_cms_sync_server/: __main__.py
apps/sync-server/service/src/easy_cms_sync_server/api/: app.py  server.py
apps/sync-server/service/src/easy_cms_sync_server/injections/: containers.py
apps/sync-server/service/src/easy_cms_sync_server/slices/health/api/: endpoints.py  examples.py  handlers.py  schemas.py
apps/sync-server/service/src/easy_cms_sync_server/slices/health/domain/: __init__.py  exceptions.py
apps/sync-server/service/src/easy_cms_sync_server/slices/version/api/: endpoints.py  examples.py  handlers.py
apps/sync-server/service/src/easy_cms_sync_server/slices/version/application/: services.py
apps/sync-server/service/src/easy_cms_sync_server/slices/version/domain/: exceptions.py
apps/sync-server/service/tests/: conftest.py  test_health.py  test_openapi.py  test_support_paths.py  test_version.py
docs/: development-plan.md
docs/adr/: 0001-json-change-log-protocol.md  0002-google-oauth-hmac-jwt-no-passwords.md  0003-service-worker-precaches-entire-site.md  0004-public-by-default-github-pages.md  0005-per-article-publication.md  0006-generated-site-subscribe-exception.md  0007-queue-all-authorized-actions.md
mise-tasks/: harness.sh
scripts/: version_check.py
src/apps/site-template/: package.json  playwright.config.ts  tsconfig.json
src/apps/site-template/src/: App.tsx  app.scss
src/apps/site-template/tests/features/: version-badge.feature
src/apps/site-template/tests/steps/: version-badge.steps.ts
src/apps/site-template/tests/web-views/: generated-site-version.web-view.ts
src/apps/studio/service/: openapi.json  pyproject.toml
src/apps/studio/service/src/easy_cms_studio/: __main__.py
src/apps/studio/service/src/easy_cms_studio/api/: __init__.py  app.py  openapi.py  server.py
src/apps/studio/service/src/easy_cms_studio/injections/: containers.py
src/apps/studio/service/tests/: conftest.py
src/apps/studio/service/tests/easy_cms_studio/api/: test_app.py
src/apps/studio/web/: orval.config.ts  package.json  playwright.config.ts  tsconfig.json
src/apps/studio/web/src/: App.tsx  app.scss
src/apps/studio/web/tests/features/: version-badge.feature
src/apps/studio/web/tests/steps/: version-badge.steps.ts
src/apps/studio/web/tests/web-views/: studio-version.web-view.ts
src/apps/sync-server/admin/: orval.config.ts  package.json  playwright.config.ts
src/apps/sync-server/admin/.features-gen/tests/features/: version-badge.feature.spec.js
src/apps/sync-server/admin/src/: App.tsx  app.scss  main.tsx
src/apps/sync-server/admin/tests/features/: version-badge.feature
src/apps/sync-server/admin/tests/steps/: version-badge.steps.ts
src/apps/sync-server/admin/tests/web-views/: platform-admin-version.web-view.ts
src/apps/sync-server/service/: openapi.json  pyproject.toml
src/apps/sync-server/service/src/easy_cms_sync_server/: __main__.py
src/apps/sync-server/service/src/easy_cms_sync_server/api/: app.py  server.py
src/apps/sync-server/service/src/easy_cms_sync_server/injections/: containers.py
src/apps/sync-server/service/src/easy_cms_sync_server/slices/: __init__.py
src/apps/sync-server/service/src/easy_cms_sync_server/slices/health/: __init__.py
src/apps/sync-server/service/src/easy_cms_sync_server/slices/health/api/: endpoints.py  examples.py  handlers.py
src/apps/sync-server/service/src/easy_cms_sync_server/slices/health/domain/: models.py
src/apps/sync-server/service/src/easy_cms_sync_server/slices/health/problems/: health-unavailable.md
src/apps/sync-server/service/src/easy_cms_sync_server/slices/version/: __init__.py
src/apps/sync-server/service/src/easy_cms_sync_server/slices/version/api/: endpoints.py  examples.py  handlers.py  responses.py
src/apps/sync-server/service/src/easy_cms_sync_server/slices/version/domain/: exceptions.py
src/apps/sync-server/service/src/easy_cms_sync_server/slices/version/problems/: version-unavailable.md
src/apps/sync-server/service/tests/: conftest.py
src/apps/sync-server/service/tests/easy_cms_sync_server/api/: test_app.py
src/apps/sync-server/service/tests/easy_cms_sync_server/slices/health/: test_endpoints.py
src/apps/sync-server/service/tests/easy_cms_sync_server/slices/health/__snapshots__/: test_endpoints.ambr
src/apps/sync-server/service/tests/easy_cms_sync_server/slices/version/: test_endpoints.py
src/apps/sync-server/service/tests/easy_cms_sync_server/slices/version/__snapshots__/: test_endpoints.ambr
(+28 files in other folders)
