[project]
name = "sync-server-service"
version = "0.1.0"
description = "Sync Server service"
requires-python = ">=3.13"
dependencies = [
  "dependency-injector>=4.48",
  "easy-cms-shared",
  "fastapi>=0.124",
  "pydantic>=2.0",
  "semantic-version>=2.10",
  "uvicorn>=0.38",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
easy_cms_sync_server = ["py.typed"]

[dependency-groups]
lint = [
  "pylint>=4.0",
  "ruff>=0.15.15",
]
typecheck = [
  "mypy>=2.1",
  "pyright>=1.1.407",
]
test = [
  "anyio>=4.12",
  "httpx>=0.28",
  "pytest>=8.3",
]
coverage = [
  "pytest-cov>=7.0",
]
recording = [
  "pytest-recording>=0.13",
]
version = [
  "semantic-version>=2.10",
]
hooks = [
  "poethepoet>=0.37",
]

[tool.uv.sources]
easy-cms-shared = { workspace = true }

[tool.poe.tasks]
lint = "ruff check --exit-non-zero-on-fix src tests"
test = "pytest"
coverage = "pytest --cov --cov-report=term-missing --cov-report=xml"
openapi = "python -m easy_cms_sync_server.api.openapi"
build = "python -m py_compile src/easy_cms_sync_server/__main__.py"
typecheck-mypy = "mypy src tests"
typecheck-pyright = "pyright src tests"
generated-diff = "git diff --exit-code openapi.json"

[tool.poe.tasks.typecheck]
sequence = [
  "typecheck-mypy",
  "typecheck-pyright",
]

[tool.poe.tasks.generated-check]
sequence = [
  "openapi",
  "generated-diff",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src/easy_cms_sync_server/slices"]
addopts = ["-vv"]
anyio_mode = "auto"

[tool.coverage.run]
branch = true
source = [
  "src/easy_cms_sync_server",
  "tests",
]
omit = [
  "src/easy_cms_sync_server/__main__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "^\\s*\\.\\.\\.$",
]

[tool.mypy]
strict = true
python_version = "3.13"
mypy_path = ["src", "../../../packages/python-shared/src"]
explicit_package_bases = true

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
extraPaths = ["../../../packages/python-shared/src"]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnusedFunction = "none"

[tool.ruff]
fix = true
preview = true
line-length = 120

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "CPY",
  "D",
  "S101",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
"src/**/tests/**" = ["PLR2004"]
"src/**/injections/containers.py" = ["PLC0415"]
"src/**/slices/*/__init__.py" = ["RUF067"]
"src/**/slices/*/api/handlers.py" = ["RUF029"]
"src/**/slices/*/domain/exceptions.py" = ["N818"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pylint.messages_control]
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
]
